tests/sumo/errors/traffic_lights/loaded_phase_shorter/errors.sumo
Error: Mismatching phase size in tls '0', program '1'.
Quitting (on error).
